# eclipse-security-suite

./: LICENSE  README.md  eclipse.py  pyproject.toml  requirements.txt
AetherEye/: README.md  config.example.yaml  core.py  launcher.py  pyproject.toml  requirements.txt
AetherEye/modules/: email_checker.py  email_hunt.py  geo_harvest.py  image_forensics.py  shodan_infra.py  social_stalker.py
Apex/: README.md  apex_agent.py  apex_launcher.py  listener.py  pyproject.toml  requirements.txt
BreachDeck/: README.md  breachdeck_launcher.py  interceptor.py  pyproject.toml  requirements.txt
BreachDeck/modules/: parser.py  sniffer.py
DockSentry/: README.md  pyproject.toml  requirements.txt
DockSentry/src/docksentry/: main.py
DockSentry/src/docksentry/core/: engine.py  rules.yaml
DockSentry/src/docksentry/remediations/: patcher.py
DockSentry/src/docksentry/reports/: manager.py  pdf_gen.py
DockSentry/src/docksentry/scanners/: base.py  container.py  dockerfile.py  image.py  k8s.py
DockSentry/src/docksentry/ui/: dashboard.py  tui.py
DockSentry/tests/: test_scanners.py
EagleEye/: README.md  pyproject.toml  requirements.txt
EagleEye/src/eagleeye/: main.py
LogPulse/: README.md  check_alerts.py  pyproject.toml  requirements.txt
LogPulse/rules/: brute_force.yaml  dir_traversal.yaml  priv_esc.yaml  webshell.yaml
LogPulse/src/logpulse/: main.py
LogPulse/src/logpulse/core/: database.py  detector.py  normalizer.py  orchestrator.py
LogPulse/src/logpulse/forensic/: auditor.py
Raven/: README.md  pyproject.toml  raven_client.py  raven_server.py  requirements.txt
RedDevil/: README.md  config.example.yaml  cracking_report.md  pyproject.toml  requirements.txt  wordlist.txt
RedDevil/src/reddevil/: main.py
RedDevil/src/reddevil/core/: engine.py  identifier.py  rules.py
RedDevil/src/reddevil/utils/: ui.py
dexter/: README.md  dexter.py  dexter_launcher.py  pyproject.toml  requirements.txt
raptor/: README.md  pyproject.toml  requirements.txt
raptor/src/raptor/: main.py
titanbrute/: main.py
titanbrute/modules/: base.py  ftp.py  http_login.py  ssh.py
