[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-eclipse-hub"
version = "1.0.0"
description = "Project Eclipse - Integrated Advanced Cybersecurity Multi-Engine Suite"
readme = "README.md"
authors = [
    { name = "Jon Bytyqi" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

# Every third-party library across ALL 10 tools combined goes here
dependencies = [
    "rich>=13.7.1",
    "pefile==2023.2.7",
    "ppdeep",
    "pypdf==4.2.0",
    "python-docx==1.1.0",
    "olefile==0.47",
    "piexif==1.1.3",
    "requests==2.31.0",
    "PyYAML",
    "scapy",
    "paramiko",
    "shodan",
    "docker",
    "kubernetes"
]

[project.scripts]
# Binds a global command to launch your main script menu from anywhere
eclipse = "eclipse:main"

[tool.setuptools]
py-modules = ["eclipse"]