[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vortex-raptor"
version = "2.0.0"
description = "Vortex Raptor Engine - Next-Gen Attack Surface Subdomain & Directory Hunter"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Jon Bytyqi" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.0.0"
]

[project.scripts]
raptor = "raptor.main:main"

[tool.setuptools.packages.find]
where = ["src"]